--- a/cv/education.tex
+++ b/cv/education.tex
@@ -9,30 +9,30 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
-%---------------------------------------------------------
-  \cventry
-    {Bachelors in Computer Engineering} % Degree
-    {University of Waterloo - 2nd Year} % Institution
-    {Waterloo, Canada} % Location
-    {Sept 2021 - April 2027} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Part of various clubs - Waterloo Computer Science Club, WARG}
-        \item {\textbf{Current Courses:} Probability Theory \& Stats 1, Signals \& Systems, Discrete Math \& Logic 2, Embedded Microprocessor Systems, Systems Programming \& Concurrency, Instrumentation \& Prototyping Lab}
-      \end{cvitems}
-    }
-    
-  % \cventry
-  %   {Highschool Diploma} % Degree
-  %   {Bell High School} % Institution
-  %   {Ottawa, ON} % Location
-  %   {Sept. 2018 - June 2022} % Date(s)
-  %   {
-  %     \begin{cvitems} % Description(s) bullet points
-  %       \item {Graduated with Distinction}
-  %       \item {Part of Student Council - responsible for managing 20+ clubs and student groups}
-  %       \item {Head of VEX Robotics and Relay For Life}
-  %     \end{cvitems}
-  %   }
-%---------------------------------------------------------
+	%---------------------------------------------------------
+	\cventry
+	{Bachelors in Computer Engineering} % Degree
+	{University of Waterloo - 3rd Year} % Institution
+	{Waterloo, Canada} % Location
+	{Sept 2021 - April 2027} % Date(s)
+	{
+		\begin{cvitems} % Description(s) bullet points
+			% \item {Part of various clubs - Waterloo Computer Science Club, WARG}
+			\item {\textbf{Current Courses:} Quantum Physics 1, Communication Systems, Digital Hardware Systems, Real-Time Operating Systems, Analog Control Systems}
+		\end{cvitems}
+	}
+
+	% \cventry
+	%   {Highschool Diploma} % Degree
+	%   {Bell High School} % Institution
+	%   {Ottawa, ON} % Location
+	%   {Sept. 2018 - June 2022} % Date(s)
+	%   {
+	%     \begin{cvitems} % Description(s) bullet points
+	%       \item {Graduated with Distinction}
+	%       \item {Part of Student Council - responsible for managing 20+ clubs and student groups}
+	%       \item {Head of VEX Robotics and Relay For Life}
+	%     \end{cvitems}
+	%   }
+	%---------------------------------------------------------
 \end{cventries}
