--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -9,66 +9,65 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
-  
 
-%---------------------------------------------------------
-  % \cventry
-  %   {InfiniHacks Organizer} % Job title
-  %   {InfiniHacks} % Organisation
-  %   {Ottawa, ON} % Location
-  %   {July 2019 - November 2019} % Date(s)
-  %   {
-  %     \begin{cvitems} % Description(s) of tasks/responsibilities
-  %       \item {Organized and planned all aspects of InfiniHack's Hackathon}
-  %       \item {For InfiniHack's first Hackathon in 2021, raised over \textbf{\$2000} in prizes, gathered over \textbf{250 hackers from 9 different countries}, and created 26 projects that address real-world issues}
-  %       \item {Presented and lead Machine Learning workshops using \textbf{PyTorch}}
-  %     \end{cvitems}
-  %   }
 
-%---------------------------------------------------------
-  \cventry
-    {Automation Tools Development Co-Op} % Job title
-    {CIENA Corporation} % Organisation
-    {Ottawa, ON} % Location
-    {January 2024 - April 2024} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        % \item {Developed major releases of internal tools such as the extract logs application}
-        \item {Created \textbf{Splunk} queries generate search queries for well known signatures of known and recognizable errors}
-        \item {\textbf{AWS} for audio sentiment analysis with pytorch}
-        \item {Extensive use of \textbf{python} and \textbf{jupyterlab} for scripting, automating, and general parsing of complex log files}
-        \item Used \textbf{Scrapy} python framework for webcrawling data
-      \end{cvitems}
-    }
+	%---------------------------------------------------------
+	% \cventry
+	%   {InfiniHacks Organizer} % Job title
+	%   {InfiniHacks} % Organisation
+	%   {Ottawa, ON} % Location
+	%   {July 2019 - November 2019} % Date(s)
+	%   {
+	%     \begin{cvitems} % Description(s) of tasks/responsibilities
+	%       \item {Organized and planned all aspects of InfiniHack's Hackathon}
+	%       \item {For InfiniHack's first Hackathon in 2021, raised over \textbf{\$2000} in prizes, gathered over \textbf{250 hackers from 9 different countries}, and created 26 projects that address real-world issues}
+	%       \item {Presented and lead Machine Learning workshops using \textbf{PyTorch}}
+	%     \end{cvitems}
+	%   }
 
-  \cventry
-    {Software Developer Co-Op} % Job title
-    {TELUS Corporation} % Organisation
-    {Ottawa, ON} % Location
-    {May 2023 - August 2023} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Contributed to auto-callout system (ACMP) for field technician and contributed to the reliability of response times in times of need}
-          \item[] {\textbf{Technical Skills:} Python, Jinja2, Docker, \textbf{Docker Swarm}, Sequelize, \textbf{Nginx}, LDAP}
-        \item {Developed a google chat internal tool for use across the TELUS Reliability Center of Excellence team}
-          \item[] {\textbf{Technical Skills:} Java, \textbf{GCP}, \textbf{GKE}, Cloud Functions, Cloud \textbf{Pub/Sub}, Github Actions, \textbf{Spring Boot}}
-      \end{cvitems}
-    }
-%---------------------------------------------------------
-  % \cventry
-  %   {Assistant Teacher Supervisor} % Job title
-  %   {Kanata South Kumon} % Organisation
-  %   {Ottawa, ON} % Location
-  %   {Nov. 2019 - Jan. 2021} % Date(s)
-  %   {
-  %     \begin{cvitems} % Description(s) of tasks/responsibilities
-  %       \item {Administered students to online classes.}
-  %       \item {Automated and optimised the data handling process for student logistics by utilizing spreadsheet scripts.}
-  %       \item {Evaluated homework, instructed students, and maintained contact with parents.}
-  %       % \item {\textbf{Technical Skills:} Excel}
-  %       % \item {\textbf{Soft Skills:} Teamwork, Time Management, Communication, Organization.}
-  %     \end{cvitems}
-  %   }
+	%---------------------------------------------------------
+	\cventry
+	{Automation Tools Development Co-Op} % Job title
+	{CIENA Corporation} % Organisation
+	{Ottawa, ON} % Location
+	{January 2024 - April 2024} % Date(s)
+	{
+		\begin{cvitems} % Description(s) of tasks/responsibilities
+			\item {Developed major releases of the extract logs application used by over 100 engineers}
+			\item {Created \textbf{Splunk} queries generate search queries for well known signatures of known and recognizable errors on hardware devices}
+      \item {Built database for audio sentiment analysis by a combination of scripting, parsing, and web scraping from various sources}
+			\item {Extensive use of \textbf{Python} and \textbf{JupyterLab} for automation and general parsing of complex log files}
+			% \item Used \textbf{Scrapy} python framework for webcrawling data
+		\end{cvitems}
+	}
 
-%---------------------------------------------------------
+	\cventry
+	{Software Developer Co-Op} % Job title
+	{TELUS Corporation} % Organisation
+	{Ottawa, ON} % Location
+	{May 2023 - August 2023} % Date(s)
+	{
+		\begin{cvitems} % Description(s) of tasks/responsibilities
+			\item {Contributed to major tool - auto-callout system (ACMP) for \textbf{hundreds} of field technicians. This tool increases reliability of TELUS infrastructure by reducing response times to tower outages \textbf{from hours down to seconds}.}
+			\item {Developed POC tool for use across the TELUS RCOE team which was demo-ed to VP}
+			\item[] {\textbf{Technical Skills:} Java, \textbf{GCP}, \textbf{GKE}, Cloud Functions, Cloud \textbf{Pub/Sub}, CI\&CD, \textbf{Spring Boot}, Python, Jinja2, Docker, \textbf{Docker Swarm}, Sequelize, \textbf{Nginx}, LDAP}
+		\end{cvitems}
+	}
+	%---------------------------------------------------------
+	% \cventry
+	%   {Assistant Teacher Supervisor} % Job title
+	%   {Kanata South Kumon} % Organisation
+	%   {Ottawa, ON} % Location
+	%   {Nov. 2019 - Jan. 2021} % Date(s)
+	%   {
+	%     \begin{cvitems} % Description(s) of tasks/responsibilities
+	%       \item {Administered students to online classes.}
+	%       \item {Automated and optimised the data handling process for student logistics by utilizing spreadsheet scripts.}
+	%       \item {Evaluated homework, instructed students, and maintained contact with parents.}
+	%       % \item {\textbf{Technical Skills:} Excel}
+	%       % \item {\textbf{Soft Skills:} Teamwork, Time Management, Communication, Organization.}
+	%     \end{cvitems}
+	%   }
+
+	%---------------------------------------------------------
 \end{cventries}
