--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -65,21 +65,6 @@
 	}
 
 	%---------------------------------------------------------
-	\cventry
-	{Arbitrage | High Volume Trading} % Organisation
-	{\underline{Arbitrage}} % Project
-	{Ottawa, ON} % Location
-	{April. 2024 - Now} % Date(s)
-	{
-		\begin{cvitems} % Description(s) of project
-			\item {A project that takes advantage of the inherent delay in computer networks to execute trades on the foreign exchange market which may lag behind platforms with more updated market data such as \textbf{IBKR}}
-			\item {Takes advantage of high frequency fluctuations in the market that cause market prices to be un-synced to make a profit}
-			\item {Bot written in \textbf{Typescript} for managing trades}
-			\item {\textbf{Technical Skills:} Docker, Docker Networking, trading algorithm, Typescript, HFT.}
-		\end{cvitems}
-	}
-
-	%---------------------------------------------------------
 	% \cventry
 	% {MLH Hacky Birthday 2021 | \textbf{Third Overall} | Managed with Git} % Organisation
 	% {\underline{\href{https://devpost.com/software/mlh-birthday-ads}{MaskPass - Hackathon Winner | \ExternalLink}}} % Project
@@ -98,8 +83,8 @@
 
 	%---------------------------------------------------------
 	\cventry
-	{Taylor Swift Generator | \textbf{Happy birthday website}} % Organisation
-	{\underline{\href{https://lefan.ca/silly-goose/happy-birthday}{Taylor Swift Generator | \ExternalLink}}} % Project
+	{Stable Diffusion XL LORA Adapter | \textbf{Image Generation}}
+	{\underline{\href{https://lefan.ca/silly-goose/image-gallery}{Stable Diffusion | \ExternalLink}}} % Project
 	{Ottawa, ON} % Location
 	{January 2024 - May 2024} % Date(s)
 	{
@@ -115,18 +100,48 @@
 
 	\cventry
 	{Interqu}  % Organisation
-	{\underline{\href{https://interqu.com}{Interqu Interview Platform | \ExternalLink}}} % Project
+	{\underline{\href{https://github.com/Interqu}{Interqu Interview Platform | \ExternalLink}}} % Project
 	{Waterloo, ON} % Location
 	{June 2023 - Now} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
 			\item {An interview practicing platform that uses AI to analyze speech, expression, and general flow of a mock interview}
-			\item {\textbf{Angular} front-end, back-end processing handled by: AWS SAM - (Statemachine, Lambda, API gateway, dynamo, graphql), pytorch, chatGPT}
+      \item {AWS Statemachine used to manage various post-processing states using Lambda functions}
+			\item {\textbf{Angular} front-end, back-end processing handled by: AWS SAM - (Statemachine, Lambda, API gateway, graphql), PyTorch, ChatGPT}
 			% \item {Nginx reverse-proxy is used to proxy running docker instances to their respective subdomains on site}
-			\item {Built using \textbf{SWAG - nginx}, \textbf{Docker}, \textbf{AWS - (lambda, statemachine, stepfunctions, SAM)}, \textbf{Pytorch}, \textbf{ChatGPT}}
+			\item {Built using \textbf{Nginx}, \textbf{Docker}, \textbf{AWS - (Lambda, Statemachine, Stepfunctions, SAM)}, \textbf{Pytorch}, \textbf{ChatGPT}}
 			% \item {\textbf{Technical Skills:} Docker, Nginx, Authelia, MongoDB, AWS lambda, Networking \& Port Management}
 		\end{cvitems}
 	}
+
+	%---------------------------------------------------------
+	\cventry
+	{Arbitrage | High Volume Trading}
+	{\underline{\href{https://github.com/LefanHu/OARB}{Arbitrage | \ExternalLink}}} % Project
+	{Ottawa, ON} % Location
+	{April. 2024 - Now} % Date(s)
+	{
+		\begin{cvitems} % Description(s) of project
+			\item {High frequency trader using \textbf{Oanda API} \& \textbf{IBKR Streaming API}}
+			\item {Bot written in \textbf{Typescript} for managing trades}
+			\item {\textbf{Technical Skills:} Docker Networking, WebSockets, IBKR Gateway, Typescript, Algorithms, HFT.}
+		\end{cvitems}
+	}
+
+
+
+	% \cventry
+	% {Custom FPV Drone}
+	% {\underline{\href{https://lefan.ca/projects/drone}{Autonomous Drone | \ExternalLink}}} % Project
+	% {Ottawa, ON} % Location
+	% {September 2024 - Now} % Date(s)
+	% {
+	% 	\begin{cvitems} % Description(s) of project
+	% 		\item {}
+	% 		\item {Powered by Betaflight, calibrated GPS \& Compass modules}
+	% 		\item {Built using Speedybee f405 FC}
+	% 	\end{cvitems}
+	% }
 
 
 
