--- a/resume.tex
+++ b/resume.tex
@@ -49,7 +49,7 @@
 \email{l2hu@uwaterloo.ca}
 %\dateofbirth{January 1st, 1970}
 %\homepage{www.posquit0.com} 
-\github{github.com/LefanHu}
+% \github{github.com/LefanHu}
 \linkedin{https://www.linkedin.com/in/lefan-hu-579591204/}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
@@ -61,7 +61,7 @@
 % \googlescholar{googlescholar-id}{name-to-display}
 %% \firstname and \lastname will be used
 % \googlescholar{googlescholar-id}{}
-\extrainfo{\textbf{2nd Year} Computer Engineer | University of Waterloo}
+\extrainfo{\textbf{3rd Year} Computer Engineer | \textbf{University of Waterloo}}
 
 % \quote{``Simplicity is deceptively complicated."}
 
@@ -86,9 +86,13 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 % \input{cv/summary.tex}
+\vspace{-1em}
 \input{cv/skills.tex}
+\vspace{-1em}
 \input{cv/experience.tex}
+\vspace{-1em}
 \input{cv/projects.tex}
+\vspace{-1em}
 \input{cv/education.tex}
 %\input{cv/achievements.tex}
 % \input{cv/interests.tex}
