--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -49,22 +49,6 @@
 
 
 	%---------------------------------------------------------
-	\cventry
-	{Hack The North 2021 | \textbf{Best Use of Google Cloud} | \textbf{Best Entrepreneurship Hack} | Managed with Git} % Organisation
-	{\underline{\href{https://devpost.com/software/hive-hq}{Hive-HQ - Hackathon Winner | \ExternalLink}}} % Project
-	{Ottawa, ON} % Location
-	{Sept. 2021 - Sept. 2021} % Date(s)
-	{
-		\begin{cvitems} % Description(s) of project
-			\item {An AI-powered, multi-target tracking system that identifies high traffic areas in public spaces. The project empowers small business owners by bringing AI analytics to small business owners.}
-			\item {\textbf{YOLOv5} model was loaded onto \textbf{PyTorch} to recognize and annotate individuals}
-			\item {Built using \textbf{Google Cloud}, matrix perspective transformations, \textbf{React.js}, \textbf{OpenCV}, \textbf{Pytorch}, and \textbf{YOLOv5}}
-			% \item {\textbf{Technical Skills:} Python, PyTorch, OpenCV, Google Cloud, AWS, React.js.}
-			% \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Communication.}
-		\end{cvitems}
-	}
-
-	%---------------------------------------------------------
 	% \cventry
 	% {MLH Hacky Birthday 2021 | \textbf{Third Overall} | Managed with Git} % Organisation
 	% {\underline{\href{https://devpost.com/software/mlh-birthday-ads}{MaskPass - Hackathon Winner | \ExternalLink}}} % Project
@@ -90,13 +74,29 @@
 	{
 		\begin{cvitems} % Description(s) of project
 			\item {\textbf{LORA adapter} trained on \textbf{AWS} G4DN GPU instance for generating taylor swift images using SDXL model}
-			\item {Hosted on \textbf{huggingface} ML platform}
-			% \item {Leveraged \textbf{cloud computing} to be viable on low-power devices}
-			\item {Built using \textbf{Transformers} , \textbf{Huggingface Serverless API}, \textbf{Stable Diffusion} and \textbf{Next.js 14}}
+			\item {Hosted on \textbf{Hugging Face} Serverless API platform}
+			\item {Built using \textbf{Transformers} , \textbf{Huggingface Serverless API}, \textbf{Stable Diffusion} and \textbf{Next.js}}
 			\item {\textbf{Technical Skills:} Cloud Computing, ML, LORA, Nextjs, Cloudflare, SSL}
 			% \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Communication.}
 		\end{cvitems}
 	}
+
+	%---------------------------------------------------------
+	\cventry
+	{Hack The North 2021 | \textbf{Best Use of Google Cloud} | \textbf{Best Entrepreneurship Hack} | Managed with Git} % Organisation
+	{\underline{\href{https://devpost.com/software/hive-hq}{Hive-HQ - Hackathon Winner | \ExternalLink}}} % Project
+	{Ottawa, ON} % Location
+	{Sept. 2021 - Sept. 2021} % Date(s)
+	{
+		\begin{cvitems} % Description(s) of project
+			\item {An AI-powered, multi-target tracking system that identifies high traffic areas in public spaces. The project empowers small business owners by bringing AI analytics to small business owners.}
+			\item {\textbf{YOLOv5} model was loaded onto \textbf{PyTorch} to recognize and annotate individuals}
+			\item {Built using \textbf{Google Cloud}, matrix perspective transformations, \textbf{React.js}, \textbf{OpenCV}, \textbf{Pytorch}, and \textbf{YOLOv5}}
+			% \item {\textbf{Technical Skills:} Python, PyTorch, OpenCV, Google Cloud, AWS, React.js.}
+			% \item {\textbf{Soft Skills:} Time Management, Teamwork, Presentation skills, Communication.}
+		\end{cvitems}
+	}
+
 
 	\cventry
 	{Interqu}  % Organisation
@@ -106,8 +106,8 @@
 	{
 		\begin{cvitems} % Description(s) of project
 			\item {An interview practicing platform that uses AI to analyze speech, expression, and general flow of a mock interview}
-      \item {AWS Statemachine used to manage various post-processing states using Lambda functions}
-			\item {\textbf{Angular} front-end, back-end processing handled by: AWS SAM - (Statemachine, Lambda, API gateway, graphql), PyTorch, ChatGPT}
+			\item {\textbf{AWS Statemachine} used to manage various post-processing states using Lambda functions}
+			\item {\textbf{Angular} front-end, back-end processing handled by: AWS \textbf{SAM} - (Statemachine, Lambda, API gateway, graphql), PyTorch, ChatGPT}
 			% \item {Nginx reverse-proxy is used to proxy running docker instances to their respective subdomains on site}
 			\item {Built using \textbf{Nginx}, \textbf{Docker}, \textbf{AWS - (Lambda, Statemachine, Stepfunctions, SAM)}, \textbf{Pytorch}, \textbf{ChatGPT}}
 			% \item {\textbf{Technical Skills:} Docker, Nginx, Authelia, MongoDB, AWS lambda, Networking \& Port Management}
