--- a/resume.tex
+++ b/resume.tex
@@ -86,9 +86,8 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 % \input{cv/summary.tex}
-\vspace{-1em}
+% \vspace{-1em}
 \input{cv/skills.tex}
-\vspace{-1em}
 \input{cv/experience.tex}
 \vspace{-1em}
 \input{cv/projects.tex}
