fix linkedin url

--- a/resume.tex
+++ b/resume.tex
@@ -50,7 +50,7 @@
 %\dateofbirth{January 1st, 1970}
 %\homepage{www.posquit0.com} 
 % \github{github.com/LefanHu}
-\linkedin{https://www.linkedin.com/in/lefan-hu-579591204/}
+\linkedin{linkedin.com/in/lefan-hu-579591204/}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
