added portfolio link & fixed some formatting

--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -68,7 +68,7 @@
 	%---------------------------------------------------------
 	\cventry
 	{Stable Diffusion XL LORA Adapter | \textbf{Image Generation}}
-	{\underline{\href{https://lefan.ca/silly-goose/image-gallery}{Stable Diffusion | \ExternalLink}}} % Project
+	{\underline{\href{https://lefan.ca/projects/stable-diffusion}{Stable Diffusion | \ExternalLink}}} % Project
 	{Ottawa, ON} % Location
 	{January 2024 - May 2024} % Date(s)
 	{
@@ -83,7 +83,7 @@
 
 	%---------------------------------------------------------
 	\cventry
-	{Hack The North 2021 | \textbf{Best Use of Google Cloud} | \textbf{Best Entrepreneurship Hack} | Managed with Git} % Organisation
+	{Hack The North 2021 | \textbf{Best Use of Google Cloud} | \textbf{Best Entrepreneurship Hack}} % Organisation
 	{\underline{\href{https://devpost.com/software/hive-hq}{Hive-HQ - Hackathon Winner | \ExternalLink}}} % Project
 	{Ottawa, ON} % Location
 	{Sept. 2021 - Sept. 2021} % Date(s)
@@ -99,7 +99,7 @@
 
 
 	\cventry
-	{Interqu}  % Organisation
+	{AWS Powered AI Interview Platform}
 	{\underline{\href{https://github.com/Interqu}{Interqu Interview Platform | \ExternalLink}}} % Project
 	{Waterloo, ON} % Location
 	{June 2023 - Now} % Date(s)
