--- a/resume.tex
+++ b/resume.tex
@@ -48,7 +48,7 @@
 % \mobile{+1 613 518 7379}
 \email{l2hu@uwaterloo.ca}
 %\dateofbirth{January 1st, 1970}
-%\homepage{www.posquit0.com} 
+\homepage{lefan.ca} 
 % \github{github.com/LefanHu}
 \linkedin{linkedin.com/in/lefan-hu-579591204/}
 % \gitlab{gitlab-id}
