overhaul & add opensource experience
- tweaked entry title color from darktext to black
- added open source section for keiyoushi/extensions
- changed some bolding and removed others due to redundancy
- removed soft skills to make space for new experience
- removed email in favor of phone number
- tweaked bottom margin
- tweaked section top spacing from 3mm to 0mm
- changed graduation date

--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,19 +12,19 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Python, C/C++, Java, HTML/CSS, JavaScript, VHDL, Matlab} % Skills
+    {Python, C/C++, Java, Kotlin, HTML/CSS, JavaScript, VHDL, Matlab} % Skills
 
   \cvskill
     {Technologies} % Category
-    {Pandas, PyTorch, Pillow, Sequelize, MongoDB, Postgre, Docker, Docker Swarm, AWS (Lambda, API gateway, EC2, Sagemaker)}
+    {PyTorch, Pillow, Sequelize, MongoDB, Postgre, Docker, Docker Swarm, AWS (Lambda, API gateway, EC2, Sagemaker)}
 
   \cvskill 
   {}
-  {React, Nextjs, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh),  Excel.}
+  {React, Nextjs, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh), Excel.}
 %---------------------------------------------------------
-  \cvskill
-    {Soft Skills} % Category
-    {Time Management, Teamwork, Communication, Problem-solving, Presentation.} % Skills
+  % \cvskill
+  %   {Soft Skills} % Category
+  %   {Time Management, Teamwork, Communication, Problem-solving, Presentation.} % Skills
 
 %---------------------------------------------------------
   % \cvskill
