--- a/cv/education.tex
+++ b/cv/education.tex
@@ -14,7 +14,7 @@
 	{Bachelors in Computer Engineering} % Degree
 	{University of Waterloo - 3rd Year} % Institution
 	{Waterloo, Canada} % Location
-	{Sept 2021 - April 2027} % Date(s)
+	{Sept. 2021 - Dec. 2026} % Date(s)
 	{
 		\begin{cvitems} % Description(s) bullet points
 			% \item {Part of various clubs - Waterloo Computer Science Club, WARG}
