--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -33,7 +33,7 @@
 	{January 2024 - April 2024} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of tasks/responsibilities
-			\item {Developed major releases of the extract logs application used by over 100 engineers}
+      \item {Developed major releases of the extract logs application used by \textbf{over 100 engineers}}
 			\item {Created \textbf{Splunk} queries generate search queries for well known signatures of known and recognizable errors on hardware devices}
       \item {Built database for audio sentiment analysis by a combination of scripting, parsing, and web scraping from various sources}
 			\item {Extensive use of \textbf{Python} and \textbf{JupyterLab} for automation and general parsing of complex log files}
@@ -50,9 +50,23 @@
 		\begin{cvitems} % Description(s) of tasks/responsibilities
 			\item {Contributed to major tool - auto-callout system (ACMP) for \textbf{hundreds} of field technicians. This tool increases reliability of TELUS infrastructure by reducing response times to tower outages \textbf{from hours down to seconds}.}
 			\item {Developed POC tool for use across the TELUS RCOE team which was demo-ed to VP}
-			\item[] {\textbf{Technical Skills:} Java, \textbf{GCP}, \textbf{GKE}, Cloud Functions, Cloud \textbf{Pub/Sub}, CI\&CD, \textbf{Spring Boot}, Python, Jinja2, Docker, \textbf{Docker Swarm}, Sequelize, \textbf{Nginx}, LDAP}
+			\item[] {\textbf{Technical Skills:} GKE, Cloud Pub/Sub, CI\&CD, Java \textbf{Spring Boot}, Jinja2, \textbf{Docker Swarm}, Sequelize, \textbf{Nginx}, LDAP}
 		\end{cvitems}
 	}
+
+  \cventry
+  {\textbf{Open Source} | Keiyoushi/extensions} % Job title
+	{\underline{\href{https://github.com/keiyoushi/extensions-source}{keiyoushi/extensions-source | \ExternalLink}}} % Organisation
+	{Ottawa, ON} % Location
+	{August 2024 - Now} % Date(s)
+	{
+		\begin{cvitems} % Description(s) of tasks/responsibilities
+      \item {A suite of extensions part of the Tachiyomi/Mihon manga reader system -- used by tens of thousands of users and myself.}
+      \item {Developed, built, and maintained numerous extensions for tens of thousands of users :)}
+      \item[] {\textbf{Technical Skills:} Android Studio, \textbf{Kotlin}, Gradle, \textbf{Mobile Development}}
+		\end{cvitems}
+	}
+
 	%---------------------------------------------------------
 	% \cventry
 	%   {Assistant Teacher Supervisor} % Job title
