--- a/resume.tex
+++ b/resume.tex
@@ -9,7 +9,7 @@
 \usepackage{tikz}
 
 % Configure page margins with geometry
-\geometry{left=1.4cm, top=.8cm, right=1.4cm, bottom=1.8cm, footskip=.5cm}
+\geometry{left=1.4cm, top=.8cm, right=1.4cm, bottom=1cm, footskip=.5cm}
 
 % Specify the location of the included fonts
 \fontdir[fonts/]
@@ -45,11 +45,11 @@
 % \position{Software Architect{\enskip\cdotp\enskip}Security Expert}
 % \address{YOUR ADDRESS}
 
-% \mobile{+1 613 518 7379}
-\email{l2hu@uwaterloo.ca}
+\mobile{+1 613 518 7379}
+% \email{l2hu@uwaterloo.ca}
 %\dateofbirth{January 1st, 1970}
 \homepage{lefan.ca} 
-% \github{github.com/LefanHu}
+\github{github.com/LefanHu}
 \linkedin{linkedin.com/in/lefan-hu-579591204/}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
@@ -61,7 +61,7 @@
 % \googlescholar{googlescholar-id}{name-to-display}
 %% \firstname and \lastname will be used
 % \googlescholar{googlescholar-id}{}
-\extrainfo{\textbf{3rd Year} Computer Engineer | \textbf{University of Waterloo}}
+\extrainfo{\textbf{3rd Year} - \textbf{University of Waterloo}}
 
 % \quote{``Simplicity is deceptively complicated."}
 
@@ -89,11 +89,9 @@
 % \vspace{-1em}
 \input{cv/skills.tex}
 \input{cv/experience.tex}
-\vspace{-1em}
 \input{cv/projects.tex}
-\vspace{-1em}
 \input{cv/education.tex}
-%\input{cv/achievements.tex}
+% \input{cv/achievements.tex}
 % \input{cv/interests.tex}
 % \input{cv/languages.tex}
 
