track configuration & modify skills section for alignment

--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -16,11 +16,8 @@
 
   \cvskill
     {Technologies} % Category
-    {PyTorch, Pillow, Sequelize, MongoDB, Postgre, Docker, Docker Swarm, AWS (Lambda, API gateway, EC2, Sagemaker)}
+    {PyTorch, Pillow, Sequelize, MongoDB, Postgre, Docker, Docker Swarm, AWS (Lambda, API gateway, EC2, Sagemaker), React, Nextjs, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh), Excel}
 
-  \cvskill 
-  {}
-  {React, Nextjs, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh), Excel.}
 %---------------------------------------------------------
   % \cvskill
   %   {Soft Skills} % Category
