remove 3rd year & remove footer

--- a/resume.tex
+++ b/resume.tex
@@ -61,7 +61,7 @@
 % \googlescholar{googlescholar-id}{name-to-display}
 %% \firstname and \lastname will be used
 % \googlescholar{googlescholar-id}{}
-\extrainfo{\textbf{3rd Year} - \textbf{University of Waterloo}}
+\extrainfo{\textbf{Computer Engineer} - \textbf{University of Waterloo}}
 
 % \quote{``Simplicity is deceptively complicated."}
 
@@ -75,10 +75,10 @@
 
 % Print the footer with 3 arguments(<left>, <center>, <right>)
 % Leave any of these blank if they are not needed
-\makecvfooter
-  {\today}
-  {}
-  {\thepage}
+% \makecvfooter
+%   {\today}
+%   {}
+%   {\thepage}
 
 
 %-------------------------------------------------------------------------------
