--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -44,7 +44,7 @@
 	\cventry
 	{Software Developer Co-Op} % Job title
 	{TELUS Corporation} % Organisation
-	{Ottawa, ON} % Location
+	{Toronto, ON} % Location
 	{May 2023 - August 2023} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of tasks/responsibilities
