move keiyoushi stuff to projects & make chronological order

--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -42,6 +42,35 @@
 	% 	\end{cvitems}
 	% }
 
+
+	%---------------------------------------------------------
+  \cventry
+  {\textbf{Open Source} | Keiyoushi/extensions} % Job title
+	{\underline{\href{https://github.com/keiyoushi/extensions-source}{keiyoushi/extensions-source | \ExternalLink}}} % Organisation
+	{Ottawa, ON} % Location
+	{August 2024 - Now} % Date(s)
+	{
+		\begin{cvitems} % Description(s) of tasks/responsibilities
+      \item {A suite of extensions part of the Tachiyomi/Mihon manga reader system -- used by tens of thousands of users and myself.}
+      \item {Developed, built, and maintained numerous extensions for tens of thousands of users :)}
+      \item[] {\textbf{Technical Skills:} Android Studio, \textbf{Kotlin}, Gradle, \textbf{Mobile Development}}
+		\end{cvitems}
+	}
+
+  %---------------------------------------------------------
+	\cventry
+	{Arbitrage | High Volume Trading}
+	{\underline{\href{https://github.com/LefanHu/OARB}{Arbitrage | \ExternalLink}}} % Project
+	{Ottawa, ON} % Location
+	{April. 2024 - Now} % Date(s)
+	{
+		\begin{cvitems} % Description(s) of project
+			\item {High frequency trader using \textbf{Oanda API} \& \textbf{IBKR Streaming API}}
+			\item {Bot written in \textbf{Typescript} for managing trades}
+			\item {\textbf{Technical Skills:} Docker Networking, WebSockets, IBKR Gateway, Typescript, Algorithms, HFT.}
+		\end{cvitems}
+	}
+
 	%---------------------------------------------------------
 	\cventry
 	{Stable Diffusion XL LORA Adapter | \textbf{Image Generation}}
@@ -75,11 +104,12 @@
 	}
 
 
+	%---------------------------------------------------------
 	\cventry
 	{AWS Powered AI Interview Platform}
 	{\underline{\href{https://github.com/Interqu}{Interqu Interview Platform | \ExternalLink}}} % Project
 	{Waterloo, ON} % Location
-	{June 2023 - Now} % Date(s)
+	{June 2023 - April 2024} % Date(s)
 	{
 		\begin{cvitems} % Description(s) of project
 			\item {An interview practicing platform that uses AI to analyze speech, expression, and general flow of a mock interview}
@@ -91,22 +121,7 @@
 		\end{cvitems}
 	}
 
-	%---------------------------------------------------------
-	\cventry
-	{Arbitrage | High Volume Trading}
-	{\underline{\href{https://github.com/LefanHu/OARB}{Arbitrage | \ExternalLink}}} % Project
-	{Ottawa, ON} % Location
-	{April. 2024 - Now} % Date(s)
-	{
-		\begin{cvitems} % Description(s) of project
-			\item {High frequency trader using \textbf{Oanda API} \& \textbf{IBKR Streaming API}}
-			\item {Bot written in \textbf{Typescript} for managing trades}
-			\item {\textbf{Technical Skills:} Docker Networking, WebSockets, IBKR Gateway, Typescript, Algorithms, HFT.}
-		\end{cvitems}
-	}
-
-
-
+	
 	% \cventry
 	% {Custom FPV Drone}
 	% {\underline{\href{https://lefan.ca/projects/drone}{Autonomous Drone | \ExternalLink}}} % Project
