prune skills section to fit in less lines

--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -11,12 +11,12 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Programming} % Category
+    {Languages} % Category
     {Python, C/C++, Java, Kotlin, HTML/CSS, JavaScript, VHDL, Matlab} % Skills
 
   \cvskill
     {Technologies} % Category
-    {PyTorch, Pillow, Sequelize, MongoDB, Postgre, Docker, Docker Swarm, AWS (Lambda, API gateway, EC2, Sagemaker), React, Nextjs, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh), Excel}
+    {PyTorch, MongoDB, Postgre, Docker Swarm, AWS (Lambda, API Gateway, EC2, Sagemaker), React, Nextjs, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh), Excel}
 
 %---------------------------------------------------------
   % \cvskill
