switch co-op for 'intern'

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -27,7 +27,7 @@
 
 	%---------------------------------------------------------
 	\cventry
-	{Automation Tools Development Co-Op} % Job title
+	{Automation Tools Development Intern} % Job title
 	{CIENA Corporation} % Organisation
 	{Ottawa, ON} % Location
 	{January 2024 - April 2024} % Date(s)
@@ -42,7 +42,7 @@
 	}
 
 	\cventry
-	{Software Developer Co-Op} % Job title
+	{Software Developer Intern} % Job title
 	{TELUS Corporation} % Organisation
 	{Toronto, ON} % Location
 	{May 2023 - August 2023} % Date(s)
