--- a/cv/education.tex
+++ b/cv/education.tex
@@ -18,7 +18,7 @@
 	{
 		\begin{cvitems} % Description(s) bullet points
 			% \item {Part of various clubs - Waterloo Computer Science Club, WARG}
-			\item {\textbf{Current Courses:} Quantum Physics 1, Communication Systems, Digital Hardware Systems, Real-Time Operating Systems, Analog Control Systems}
+			\item {\textbf{Current Courses:} Quantum Physics, Communication Systems, Digital Hardware Systems, Real-Time Operating Systems, Analog Control Systems}
 		\end{cvitems}
 	}
 
