replace excel with scrapy

--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -16,7 +16,7 @@
 
   \cvskill
     {Technologies} % Category
-    {PyTorch, MongoDB, Postgre, Docker Swarm, AWS (Lambda, API Gateway, EC2, Sagemaker), React, Nextjs, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh), Excel}
+    {PyTorch, MongoDB, Postgre, Docker Swarm, AWS (Lambda, API Gateway, EC2, Sagemaker), React, Nextjs, Nginx, Spring Boot, GCP, GKE, Pub/Sub, Cloud Functions, Linux, Shell (Bash/Zsh), Scrapy}
 
 %---------------------------------------------------------
   % \cvskill
